unpackaged/main/default/objects/FSL__SchedulingRecipe__c/FSL__SchedulingRecipe__c.object-meta.xml
<CustomObject>
    <label>Scheduling Recipe</label>
    <nameField>
        <label>Scheduling Recipe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduling Recipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>