unpackaged/main/default/objects/FSL__SchedulingRecipe__c/fields/FSL__LKL_Threshold__c.field-meta.xml
<CustomField>
    <fullName>FSL__LKL_Threshold__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Last Known Location Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>