unpackaged/main/default/objects/FSL__SchedulingRecipe__c/fields/FSL__Priority__c.field-meta.xml
<CustomField>
    <fullName>FSL__Priority__c</fullName>
    <label>Priority</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>