unpackaged/main/default/objects/FSL__SchedulingRecipe__c/fields/FSL__Scenario_Specific__c.field-meta.xml
<CustomField>
    <fullName>FSL__Scenario_Specific__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Scenario Specific</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>