unpackaged/main/default/objects/FSL__SchedulingRecipe__c/fields/FSL__Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL__Scenario_Type__c</fullName>
    <label>Scenario Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA Canceled</fullName>
                <default>true</default>
                <label>SA Canceled</label>
            </value>
            <value>
                <fullName>SA Shortened</fullName>
            </value>
            <value>
                <fullName>Overlap (SA Lengthened)</fullName>
            </value>
            <value>
                <fullName>Overlap (Post-Emergency Scheduling)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>