unpackaged/main/default/objects/FSL__SchedulingRecipe__c/fields/FSL__Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>FSL__Scheduling_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduling Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Scheduling Recipes</relationshipLabel>
    <relationshipName>Scheduling_Recipes</relationshipName>
    <type>Lookup</type>
</CustomField>